fix, feat(front-end): 【selectitemnew 頁】標題列 — scrollbar 不應佔據標題列空間 | 優化 標題樣式 | 能顯示正確的標題名稱

--- a/project/story/static/css/menu/select_item_new.css
+++ b/project/story/static/css/menu/select_item_new.css
@@ -15,32 +15,38 @@ section {
 
 .item_list_container {
   margin: 2.5vh 0 2.5vh 1.5vw;
-  padding-bottom: 4.25vh;
   border-radius: 4.5vw;
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
-  justify-content: space-between;
   flex: 110;
   background-color: rgba(152, 152, 152, 0.25);
-  backdrop-filter: blur(0.5rem);
+  backdrop-filter: blur(0.2rem);
 }
 
 .header_container {
-  border-style: outset;
+  border-color: #ede3d3;
+  border-width: 0.2vw;
   border-radius: 4.5vw 4.5vw 0px 0px;
+  border-style: outset;
+  background-color: rgba(152, 152, 152, 0.25);
+  backdrop-filter: blur(0.1rem);
   width: -webkit-fill-available;
-  background: linear-gradient(rgb(188, 122, 122), rgb(255, 195, 102));
+  box-shadow: inset 0 0.2vw 0.5vw rgba(0, 0, 0, 0.6), 0 0.5vw 0.2vw rgba(0, 0, 0, 0.1), 0 1vw 2vw rgba(0, 0, 0, 0.8);
   padding: 3vh 0;
-  font-size: clamp(1vmin, 3.5vmin, 8vmin);
+  font-size: clamp(1vmin, 3.75vmin, 8vmin);
   color: rgb(247, 241, 231);
   -webkit-text-stroke: 0.01vmin rgb(214, 169, 130);
   display: flex;
   justify-content: space-evenly;
 }
 
-#data-container, #selected_item_id {
-  display: none;
+.list_container {
+  width: -webkit-fill-available;
+  padding: 0 0 4.25vh 0.75vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: auto;
 }
 
 .item_name {
@@ -107,6 +113,10 @@ section {
   max-height: fit-content;
   transform: scaleY(1);
   position: relative;
+}
+
+#data-container, #selected_item_id {
+  display: none;
 }
 
 ::-webkit-scrollbar {
